--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "lessons",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "files/server.js",
   "scripts": {
-    "hello": "node server.js",
+    "hello": "node files/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node files/server.js"
   },
   "repository": {
     "type": "git",
